plugins/kotlin/idea/tests/testData/checker/codeFragments/binaryExpression.kt.fragment.k2
a + <error descr="[UNRESOLVED_REFERENCE]">b</error>